--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
      <!-- navbar -->
      <nav style="border-bottom: 2px white solid;">
         <div class="p-2 text-white d-flex justify-content-between">
-            <a href="index.html" class="text-decoration-none text-white fs-5">Home</a>
+            <a href="/" class="text-decoration-none text-white fs-5">Home</a>
             <div id="lb">
                 <button id="logout-btn" class="logout border-0 bg-black text-white fs-5 mx-3">Logout</button>
             </div>
@@ -24,15 +24,14 @@
 
 
     <main>
-        <div class="container-fluid">
-            <div class="card mx-5 bg-black text-white">
+        <div class="container">
+            <div class="card bg-black text-white">
                 <div class="card-body">
                     <h1 class="my-5">Profile</h1>
                     <hr class="hr1">
-                    <div id="user-details"></div>
-                    <h4 class="fs-2">Full Name : <span id="user-name"></span></h4>
-                    <h4 class="my-4 fs-2">Email : <span id = "user-email"></span></h4>
-                    <h4 class="fs-2">Password :<span id = "user-pass"></span></h4>
+                    <h4 class="user-d">Full Name : <span id="user-name"></span></h4>
+                    <h4 class="my-4 user-d">Email : <span id = "user-email"></span></h4>
+                    <h4 class="user-d">Password :<span id = "user-pass"></span></h4>
                 </div>
             </div>
         </div>
