--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#" class="text-decoration-none text-white fs-5">Welcome</a>
             <div>
                 <a href="" class="text-decoration-none text-white fs-5 mx-3">Signup</a>
-                <a href="profile.html" class="text-decoration-none text-white fs-5 mx-3">Profile</a>
+                <a href="/profile.html" class="text-decoration-none text-white fs-5 mx-3">Profile</a>
             </div>
         </div>
     </nav>
