--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
             <a href="#" class="text-decoration-none text-white fs-5">Welcome</a>
             <div>
                 <a href="" class="text-decoration-none text-white fs-5 mx-3">Signup</a>
-                <a href="/profile.html" class="text-decoration-none text-white fs-5 mx-3">Profile</a>
+                <a href="profile.html" class="text-decoration-none text-white fs-5 mx-3">Profile</a>
             </div>
         </div>
     </nav>
 
-
-<!-- form box -->
 
     <main>
         <div class="container my-5">
@@ -54,11 +52,7 @@
 
             </div>
         </div>
-    </main>>
-
-
-
-
+    </main>
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
