--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <!-- message ll be shown here after getting success or error -->
                         <p id="message" class="fs-5"></p>
                         <div id="timer"></div>
-                        <button class="btn text-white fs-3" id="signup">Signup</button>
+                        <button class="btn text-white fs-3" onclick="signUpProcessing()" id="signup">Signup</button>
                 
                 </div>
 
