--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
-<body style="background-color: black;">
+<body onload="atProfile()" style="background-color: black;">
 
      <!-- navbar -->
      <nav style="border-bottom: 2px white solid;">
