--- a/profile.html
+++ b/profile.html
@@ -14,9 +14,9 @@
      <!-- navbar -->
      <nav style="border-bottom: 2px white solid;">
         <div class="p-2 text-white d-flex justify-content-between">
-            <a href="index.html" class="text-decoration-none text-white fs-5">Home</a>
+            <a href="/index.html" class="text-decoration-none text-white fs-5">Home</a>
             <div id="lb">
-                <button id="logout-btn" class="logout border-0 bg-black text-white fs-5 mx-3">Logout</button>
+                <button onclick="logout()" class="logout border-0 bg-black text-white fs-5 mx-3">Logout</button>
             </div>
         </div>
     </nav>
@@ -34,7 +34,7 @@
                     <h4 class="user-d">Password :<span id = "user-pass"></span></h4>
                 </div>
             </div>
-        </div>
+          </div>
     </main>
 
 
