--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
         <div class="p-2 text-white d-flex justify-content-between">
             <a href="index.html" class="text-decoration-none text-white fs-5">Home</a>
             <div id="lb">
-                <button onclick="logout()" class="logout border-0 bg-black text-white fs-5 mx-3">Logout</button>
+                <!-- <button onclick="logout()" class="logout border-0 bg-black text-white fs-5 mx-3">Logout</button> -->
             </div>
         </div>
     </nav>
